--- a/_posts/2021-06-01-11.md
+++ b/_posts/2021-06-01-11.md
@@ -1,10 +1,10 @@
 ---
-title: "[SQL] 실제 데이터 실습"
+title: "trueskill 공부"
 date: 2021-06-01T21:31:46+09:00
 draft: false
-description: "[SQL] : 코호트 분석, 고객 세그먼트등 영국 E-commerce 데이터 분석 "
-tags: [SQL]
-categories: [SQL]
+description: "논문을 바탕으로 trueskill 이해하기 "
+tags: [Study]
+categories: [Study]
 toc : true
 toc_sticky : true
 toc_label : 목차
