[PYTHON] 키패드 누르기

--- a/_posts/2021-12-01-python-01.md
+++ b/_posts/2021-12-01-python-01.md
@@ -3,8 +3,8 @@ title: "[PYTHON] 키패드 누르기"
 date: 2021-12-01T21:31:46+09:00
 draft: false
 description: "[PYTHON] : Programmers LV#01"
-tags: [PYTHON]
-categories: [PYTHON]
+tags: [Algorithm]
+categories: [Algorithm]
 toc : true
 toc_sticky : true
 toc_label : 목차
