[Programmers] 두 정수 사이의 합

--- a/_posts/2021-03-01-p1.md
+++ b/_posts/2021-03-01-p1.md
@@ -3,8 +3,8 @@ title: "[Programmers] 두 정수 사이의 합 "
 date: 2021-03-01T21:31:46+09:00
 draft: false
 description: "[Programmers] 두 정수 사이의 합 "
-tags: [Programmers Algorithm]
-categories: [Programmers Algorithm]
+tags: [Algorithm]
+categories: [Algorithm]
 toc : true
 toc_sticky : true
 toc_label : 목차
