--- a/_posts/2022-02-10-23th.md
+++ b/_posts/2022-02-10-23th.md
@@ -3,7 +3,7 @@ title: "비대칭 데이터 처리"
 date: 2022-01-22T21:31:46+09:00
 draft: false
 description: "Log Transformation,  Square Root Transform, Box-Cox Transform"
-tags: [ML]
+tags: [ModelPreProcessing]
 categories: [DataScience]
 toc : true
 toc_sticky : true
