--- a/_posts/2022-02-10-21th.md
+++ b/_posts/2022-02-10-21th.md
@@ -1,8 +1,8 @@
 ---
-title: "K-means clustering"
+title: "K-Means Clustering"
 date: 2022-02-10T21:31:46+09:00
 draft: false
-description: "[SQL] : Testdome"
+description: "[Inflearn 파이썬 머신러닝 완벽가이드 강의 ] : 군집화 개요 및 K-Means 군집화"
 tags: [Unsupervised learning]
 categories: [DataScience]
 toc : true
@@ -10,10 +10,45 @@ toc_sticky : true
 toc_label : 목차
 ---
 
+### Clustering 
+
+ * 정의 : 데이터 포인트들을 별개의 군집으로 그룹화 </br>
+ * 특징 : 유상성이 높은 데이터들을 동일한 그룹으로 분류하고 서로 다른 군집들이 상이성을 가지도록 그룹화 
+ * 활용 분야 : 
+    * 고객, 마켓, 브랜드, 사회 경제 활동 세분화(Segmentation)
+    * Image 검출, 세분화, 트랙킹 => 이미지 관련/영상 관련 분야 
+    * 이상 검출
+ * 종류 : K-Means, Mean Shift, Gaussian Mixture Model, DBSCAN
+
+
 ### K-means Clustering </br>
 
-* 정의 : 각 군집의 평균(mean)을 활용하여 K개의 군집으로 묶는 알고리즘 
+* 정의 : 각 군집의 평균(mean)을 활용하여 K개의 군집으로 묶는 알고리즘 (군집 중심점-centroid-기반 클러스터링)
   * 군집화 : 비지도 학습 종류. 레이블(정답)이 없을 때, 데이터를 묶는 방법
   * 여기서 평균은 각 클러스터의 중심과 데이터들의 평균 거리
   * 가깝게 위치하는 데이터를 비슷한 특성을 지닌 데이터로 여기고 같은 군집으로 군집화
+  * 장점 : 
+    * 일반적인 군집화에서 가장 많이 활용
+    * 알고리즘이 쉽고 간결하다
+    * 대용량 데이터에도 활용 가능하다
+   * 단점 : 
+     * 거리 기반 알고리즘으로 속성의 개수가 매우 많을 경우 군집화 정확도가 떨어집니다(이를 위해 PCA로 차원축소를 고려해야함)
+     * 반복을 수행하는 데, 반복 횟수가 많을 경우 수행 시간이 느리다
+     * 이상치(Outlier) 데이터에 취약하다
+    * KMeans 클래스 : 
+      * 주요 파라미터 :  
+        1. n_cluster : 클러스터 개수 
+        2. init : 군집 중심점의 좌표 설정 방식. 보통 k-means++를 최초로 설정
+        3. max_iter : 최대 반복 횟수 ( 이 횟수 이전에 모든 데이터의 중심점 이동이 없으면 종료)
+      * 주요 속성 :
+        1. labels_ : 각 데이터 포인트가 속한 군집 중심점 레이블 e.g. [0 0 1 .... 0 1]
+        2. cluster_centers_: 각 군집 중심점 좌표 (Shape는 [군집 개수, 피처 개수]). 이를 이용하면 군집 중심점 좌표가 어디인지 시각화 할 수 있음. 
+
+
+
+
+
+
+
+참고 : 파이썬 머신러닝 완벽가이드 
 
