--- a/_posts/2022-02-10-21th.md
+++ b/_posts/2022-02-10-21th.md
@@ -35,6 +35,7 @@ toc_label : 목차
      * 거리 기반 알고리즘으로 속성의 개수가 매우 많을 경우 군집화 정확도가 떨어집니다(이를 위해 PCA로 차원축소를 고려해야함)
      * 반복을 수행하는 데, 반복 횟수가 많을 경우 수행 시간이 느리다
      * 이상치(Outlier) 데이터에 취약하다
+    * 과정 : 1.군집의 개수(K) 설정 → 2.초기 중심점 설정 → 3.데이터를 군집에 할당(배정) → 4.중심점 재설정(갱신) → 5.데이터를 군집에 재할당(배정) (5 ↔ 4 과정을 중심점의 위치가 더 이상 변하지 않을 때까지 반복)
     * KMeans 클래스 : 
       * 주요 파라미터 :  
         1. n_cluster : 클러스터 개수 
@@ -50,5 +51,7 @@ toc_label : 목차
 
 
 
-참고 : 파이썬 머신러닝 완벽가이드 
+※ 참고 : </br>
+* 파이썬 머신러닝 완벽가이드 
+* https://velog.io/@jhlee508/%EB%A8%B8%EC%8B%A0%EB%9F%AC%EB%8B%9D-K-%ED%8F%89%EA%B7%A0K-Means-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98
 
