--- a/_posts/2022-02-10-21th.md
+++ b/_posts/2022-02-10-21th.md
@@ -9,7 +9,7 @@ toc : true
 toc_sticky : true
 toc_label : 목차
 ---
-
+🎨아래 자료는 인프런에 게시된 파이썬 머신러닝 완벽가이드 강의를 공부한 내용입니다. 
 ### Clustering 
 
  * 정의 : 데이터 포인트들을 별개의 군집으로 그룹화 </br>
