--- a/_posts/2022-02-10-21th.md
+++ b/_posts/2022-02-10-21th.md
@@ -9,7 +9,7 @@ toc : true
 toc_sticky : true
 toc_label : 목차
 ---
-🎨아래 자료는 인프런에 게시된 파이썬 머신러닝 완벽가이드 강의를 공부한 내용입니다. 
+🎨아래 자료는 인프런에 게시된 파이썬 머신러닝 완벽가이드 강의와 참고에 게시된 블로그 자료를 공부한 내용입니다. 
 ### Clustering 
 
  * 정의 : 데이터 포인트들을 별개의 군집으로 그룹화 </br>
@@ -18,7 +18,8 @@ toc_label : 목차
     * 고객, 마켓, 브랜드, 사회 경제 활동 세분화(Segmentation)
     * Image 검출, 세분화, 트랙킹 => 이미지 관련/영상 관련 분야 
     * 이상 검출
- * 종류 : K-Means, Mean Shift, Gaussian Mixture Model, DBSCAN
+ * 종류 : 계층적 군집(150개 이하의 적은 데이터에 유리) , 비계층적 군집
+ * 유형 : K-Means, Mean Shift, Gaussian Mixture Model, DBSCAN
 
 
 ### K-means Clustering </br>
@@ -54,4 +55,5 @@ toc_label : 목차
 ※ 참고 : </br>
 * 파이썬 머신러닝 완벽가이드 
 * https://velog.io/@jhlee508/%EB%A8%B8%EC%8B%A0%EB%9F%AC%EB%8B%9D-K-%ED%8F%89%EA%B7%A0K-Means-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98
+* https://rstudio-pubs-static.s3.amazonaws.com/249084_09c0daf4ceb24212a81ceddca97ba1ea.html
 
