--- a/_posts/2022-02-10-21th.md
+++ b/_posts/2022-02-10-21th.md
@@ -3,7 +3,7 @@ title: "K-Means Clustering"
 date: 2022-02-10T21:31:46+09:00
 draft: false
 description: "[Inflearn 파이썬 머신러닝 완벽가이드 강의 ] : 군집화 개요 및 K-Means 군집화"
-tags: [Unsupervised learning]
+tags: [Unsupervised Learning]
 categories: [DataScience]
 toc : true
 toc_sticky : true
