통계 검정 종류

--- a/_posts/2022-01-10-22th.md
+++ b/_posts/2022-01-10-22th.md
@@ -1,13 +1,41 @@
 ---
-title: "통계 검정"
+title: "통계 검정 종류"
 date: 2022-01-10T21:31:46+09:00
 draft: false
-description: "[SQL] : Testdome"
-tags: [Test]
-categories: [Stat]
+description: "[통계 검증 종류]"
+tags: [Statistics]
+categories: [DataScience]
 toc : true
 toc_sticky : true
 toc_label : 목차
 ---
 
-T test vs Anova Test vs Chi Test vs Z Test
+🧱 통계 검정 기법 
+
+아래에 기술된 내용은 https://m.blog.naver.com/gracestock_1/120200076090 블로그가 출처이며, 내용은 동일합니다. 
+블로그에 기록하며 공부하는 용으로 적은 것입니다. 
+
+1. 집단 간 비교 검증 : 하나의 공통된 주제 아래, 두 개 이상의 집단을 서로 비교하는 경우
+    * 교차 분석 (카이제곱검정, Chi-squared Test)  
+      * 둘 이상의 집단 간에 특정 변수의 비율에서 차이가 있는 지 검증하는 분석 방법
+      * 예시) 경영학과와 아동 교육 학과의 남여비율 비교
+    * 차이 검증 (T-test) 
+      * 두 집단 간의 평균 값에 차이가 있는 지를 검증하는 분석 방법
+      * 예시) 국문학과의 토익점수보다 영문학과의 토익 점수가 더 높다. 
+    * 변량 분석, 분산 분석 (Anova)
+      * 둘 이상의 집단 간에 평균 값의 차이가 있는 지를 검증하는 분석 방법
+      * 예시) 국문학과와 중국어학과의 토익점수보다 영문학과의 토익점수가 더 높다, 중국어학과의 토익점수보다 국문학과의 토익점수가 더 높다. 
+2. 변수 간 관련성 검증 : 독립 변수, 종속 변수를 설정하고, 이 변수들 간 관련성을 찾는 검증 방법
+    1) 상관 분석 : 두 변수 간에 관계가 있는 지를 검증하는 분석 방법 
+    2) 회귀 분석 : 두 변수 간에 직선적인 관계가 있는 지를 검증하는 분석 방법 
+3. 고급 분석 : 기타 고급 분석에 해당하는 것으로, 요인 분석과 구조 방정식이 존재. 일반적으로 논문 진행에 근거가 되는 기본 자료가 설문지인 경우가 많고, 가설 검증에 있어 다양한 변수가 존재하는 경우에는 요인 분석과 구조 방정식을 활용
+    1) 요인 분석 (Factor Analysis) : 여러 개의 설문 문항들을 관련이 높은 것끼리 묶어서 몇 개의 요인으로 나타내는 분석방법
+    2) 구조 방정식 모형 (Structural Equation Modeling) : 여러 변수들 간의 인과관계를 하나의 모형을 통해 검증하는 분석방법
+
+
+
+
+
+
+<참고>
+https://m.blog.naver.com/gracestock_1/120200076090
