--- a/_posts/2022-01-10-22th.md
+++ b/_posts/2022-01-10-22th.md
@@ -26,11 +26,11 @@ toc_label : 목차
       * 둘 이상의 집단 간에 평균 값의 차이가 있는 지를 검증하는 분석 방법
       * 예시) 국문학과와 중국어학과의 토익점수보다 영문학과의 토익점수가 더 높다, 중국어학과의 토익점수보다 국문학과의 토익점수가 더 높다. 
 2. 변수 간 관련성 검증 : 독립 변수, 종속 변수를 설정하고, 이 변수들 간 관련성을 찾는 검증 방법
-    1) 상관 분석 : 두 변수 간에 관계가 있는 지를 검증하는 분석 방법 
-    2) 회귀 분석 : 두 변수 간에 직선적인 관계가 있는 지를 검증하는 분석 방법 
+    * 상관 분석 : 두 변수 간에 관계가 있는 지를 검증하는 분석 방법 
+    * 회귀 분석 : 두 변수 간에 직선적인 관계가 있는 지를 검증하는 분석 방법 
 3. 고급 분석 : 기타 고급 분석에 해당하는 것으로, 요인 분석과 구조 방정식이 존재. 일반적으로 논문 진행에 근거가 되는 기본 자료가 설문지인 경우가 많고, 가설 검증에 있어 다양한 변수가 존재하는 경우에는 요인 분석과 구조 방정식을 활용
-    1) 요인 분석 (Factor Analysis) : 여러 개의 설문 문항들을 관련이 높은 것끼리 묶어서 몇 개의 요인으로 나타내는 분석방법
-    2) 구조 방정식 모형 (Structural Equation Modeling) : 여러 변수들 간의 인과관계를 하나의 모형을 통해 검증하는 분석방법
+    * 요인 분석 (Factor Analysis) : 여러 개의 설문 문항들을 관련이 높은 것끼리 묶어서 몇 개의 요인으로 나타내는 분석방법
+    * 구조 방정식 모형 (Structural Equation Modeling) : 여러 변수들 간의 인과관계를 하나의 모형을 통해 검증하는 분석방법
 
 
 
