--- a/_posts/2020-02-18-27th.md
+++ b/_posts/2020-02-18-27th.md
@@ -17,18 +17,18 @@ toc_label : 목차
   * 여담으로, 그룹이 3개 이상일 때, t-test를 이 경우 사용하기 힘든 이유는 1종 오류 (귀무 가설이 참인데 기각) 발생 가능성이 커지기 때문입니다. </br>
     그룹이 3개일 때, t-test를 진행하게 된다면 2개 그룹씩 비교하여 3C2만큼 비교가 발생하게 된다. 이 때, 유의수준을 0.05로 잡는다면 Bonferroni에 의해 1종 오류 가능성이 최대 15%까지 증가합니다. 
     
-* Anova Test 수행 필요 조건
+#### Anova Test 수행 필요 조건
   Anova 검증을 수행하기 위해선 다음의 세 가지 조건을 만족해야한다. 
   * 정규성 (One Sample t-test, Independent Sample t-test, Paired Sample t-test) : shapiro-wilk normality test 또는 Normal Q-Q plot으로 확인할 수 있습니다. 
   * 독립성 (One Way ANOVA, Two Way ANOVA) : 두 그룹(수준)은 서로 독립적이어야 한다.
   * 등분산성 (One Way ANOVA, Two Way ANOVA) : Bartlett's Test 또는 Levene's Test 로 등분산 검정 진행합니다. 
 
-* 종류
+#### 종류
   * One Way ANOVA (일원 배치 분산분석) : 요인이 1개이고, 그룹(수준)이 3개 이상인 경우 각 그룹 간 유의한 차이가 있는지 검정한다. 그룹(수준)이 2개인 경우에도 사용 가능하지만, 이 경우는 t-test를 사용한다.
   * Two Way ANOVA (이원 배치 분산분석) : 요인이 2개 이상일 때 사용 
   * cf) Welch's ANOVA : 등분산성 조건을 만족하지 못했을 때, 사용
 
-* 사후검정
+#### 사후검정
   * Anova 검정은 차이가 있는 그룹이 있다는 것만 알려줄 뿐, 어떤 그룹간에 차이가 있는 지를 알려주지 않는다. 따라서 유의미한 차이가 있다고 나온 경우, 사후검정을 통해 어떤 그룹 간에 
     차이가 있는 지 확인해야한다. 대표적으로 Tukey's Test와 Duncan Test 등이 있다.</br> ※ ANOVA 결과 차이가 없다고 나오면 사후검정은 필요없다.
 
