--- a/_posts/2022-02-10-21th.md
+++ b/_posts/2022-02-10-21th.md
@@ -12,7 +12,7 @@ toc_label : 목차
 🎨아래 자료는 인프런에 게시된 파이썬 머신러닝 완벽가이드 강의와 참고에 게시된 블로그 자료를 공부한 내용입니다. 
 ### Clustering 
 
- * 정의 : 데이터 포인트들을 별개의 군집으로 그룹화 </br>
+ * 정의 : 데이터 포인트들을 별개의 군집으로 그룹화 
  * 특징 : 유상성이 높은 데이터들을 동일한 그룹으로 분류하고 서로 다른 군집들이 상이성을 가지도록 그룹화 
  * 활용 분야 : 
     * 고객, 마켓, 브랜드, 사회 경제 활동 세분화(Segmentation)
@@ -22,7 +22,7 @@ toc_label : 목차
  * 유형 : K-Means, Mean Shift, Gaussian Mixture Model, DBSCAN
 
 
-### K-means Clustering </br>
+### K-means Clustering 
 
 * 정의 : 각 군집의 평균(mean)을 활용하여 K개의 군집으로 묶는 알고리즘 (군집 중심점-centroid-기반 클러스터링)
   * 군집화 : 비지도 학습 종류. 레이블(정답)이 없을 때, 데이터를 묶는 방법
@@ -52,7 +52,7 @@ toc_label : 목차
 
 
 
-※ 참고 : </br>
+※ 참고 : 
 * 파이썬 머신러닝 완벽가이드 
 * https://velog.io/@jhlee508/%EB%A8%B8%EC%8B%A0%EB%9F%AC%EB%8B%9D-K-%ED%8F%89%EA%B7%A0K-Means-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98
 * https://rstudio-pubs-static.s3.amazonaws.com/249084_09c0daf4ceb24212a81ceddca97ba1ea.html
