--- a/_posts/2022-03-15-1th.md
+++ b/_posts/2022-03-15-1th.md
@@ -11,6 +11,7 @@ toc_label : 목차
 ---
 #### 다음 연습문제들은 하단의 블로그에 게시된 문제입니다.
 
+#### 문제 1. 전체 회원의 날짜별 누적 주문금액을 구해라. (단, 결과는 날짜순 그리고 날짜는 연도 및 월로 표시할 것)
 
 [1번째 방법]
 ``` sql 
@@ -45,7 +46,17 @@ select p.member_id, p.order_amount, (@amount := @amount + p.order_amount) order_
 from Test_table order by member_id, order_date desc) p;
 ```
 
+#### 문제 3. orders 테이블 안에 결제완료인 주문에 한해서 해당 멤버(member_id)의 몇 번째 주문(order_sequence)를 나타내는 쿼리를 작성하시오.
+
+```sql 
+select * from orders;
+with tmp as (select member_id, order_time from orders) 
+select member_id, order_time, rank() over (partition by member_id order by order_time) 
+from tmp ;
+```
+
+
 </br></br></br>
 
 
-출처: https://codingspooning.tistory.com/entry/MySQL-그룹별-누적-합계-구하기?category=987092 [코딩하는 금융인]
+출처: https://codingspooning.tistory.com/category/Programming%20%26%20Data%20Analysis/SQL
