--- a/_posts/2022-03-15-1th.md
+++ b/_posts/2022-03-15-1th.md
@@ -57,15 +57,15 @@ from tmp ;
 
 #### 문제 4. 주어진 테이블을 바탕으로 members 내 회원(member_id) 중 회사의 직원이 아닌 회원에 대해 
 
-1. 첫 구매 시간(first_time) </br>
+#### 1. 첫 구매 시간(first_time) 
 
-2. 마지막 구매 시간(last_time) </br>
+#### 2. 마지막 구매 시간(last_time)
 
-3. 총 결제액(sum_pay) </br>
+#### 3. 총 결제액(sum_pay)
 
-4. 주문수(order_cnt) </br>
+#### 4. 주문수(order_cnt) 
 
-를 구하는 쿼리를 작성하시오. (단, 해당 칼럼은 모두 결제완료인 주문에 한해서 계산되어야 함. 또한, 쿼리를 실행하여 얻게 된 데이터는 반드시 주어진 테이블에 있는 데이터이어야 함.)
+#### 를 구하는 쿼리를 작성하시오. (단, 해당 칼럼은 모두 결제완료인 주문에 한해서 계산되어야 함. 또한, 쿼리를 실행하여 얻게 된 데이터는 반드시 주어진 테이블에 있는 데이터이어야 함.)
 
 ```sql
 select id, min(order_time), max(order_time), sum(pay_money), count(*)
