--- a/_posts/20240131_ABtest.md
+++ b/_posts/20240131_ABtest.md
@@ -1,5 +1,5 @@
 ---
-title: "A/B Test CH6.조직 척도"
+title: "TrustWorthy Online Controlled eperiments A/B Testing CH6.조직 척도"
 date: 2024-01-29T21:31:46+09:00
 draft: false
 description: "A/B Test"
