--- a/_posts/20240131_ABtest.md
+++ b/_posts/20240131_ABtest.md
@@ -4,7 +4,7 @@ date: 2024-01-29T21:31:46+09:00
 draft: false
 description: "A/B Test"
 tags: [A/BTEST]
-categories: [DataAnalysis]
+categories: [DataAnalysis2]
 toc : true
 toc_sticky : true
 toc_label : 목차
